banner, products, package, animations, navigation fixes

--- a/index.html
+++ b/index.html
@@ -53,6 +53,99 @@
         </div>
     </div>
 
+    <main class="content">
+
+        <section class="banner">
+            <div class="banner__wrapper">
+                <div class="banner__circle">
+                    <img src="./assets/Twisted-Sparkles-circle-pink.png" alt="">
+                </div>
+                <div class="banner__item banner__item--passion">
+                    <img src="./assets/granadilla-1.png" alt="">
+                </div>
+                <div class="banner__item banner__item--passion">
+                    <img src="./assets/granadilla-2.png" alt="">
+                </div>
+                <div class="banner__item banner__item--lemon">
+                    <img src="./assets/lime-1.png" alt="">
+                </div>
+                <div class="banner__item banner__item--lemon">
+                    <img src="./assets/lime-2.png" alt="">
+                </div>
+                <div class="banner__item banner__item--passion-can">
+                    <img src="./assets/Twisted-single-Passion-alt-angle.png" alt="">
+                </div>
+                <div class="banner__item banner__item--lemon-can">
+                    <img src="./assets/Twisted-single-Lemon-alt-angle.png" alt="">
+                </div>
+            </div>
+            <div class="banner__heading">
+                <h2 class="banner__title">Twisted Water</h2>
+                <h2 class="banner__desc">That Packs A Punch</h2>
+            </div>
+
+        </section>
+
+        <section class="package">
+            <div class="package__item">
+                <div class="package__image">
+                    <div class="package__circle">
+                        <img src="./assets/Twisted-Sparkles-circle-pink.png" alt="">
+                    </div>
+                    <div class="package__can">
+                        <img src="./assets/Twisted-single-passion-alt-nog-2.png" alt="">
+                    </div>
+                    <div class="package__mascot">
+                        <img src="./assets/Twisted-Sparkles-char-lil-slime-shady.png" alt="">
+                    </div>
+                </div>
+                <div class="package__info">
+                    <h2 class="package__title package__title--pink">Lil’ Slime Shady</h2>
+                    <p class="package__desc">This well-armed Rocktopus works as manager of operations here at Twisted Sparkles.</p>
+                </div>
+            </div>
+
+            <div class="package__item">
+                <div class="package__image">
+                    <div class="package__circle">
+                        <img src="./assets/Twisted-Sparkles-circle-green.png" alt="">
+                    </div>
+                    <div class="package__can">
+                        <img src="./assets/Twisted-single-lemon-alt-nog-2.png" alt="">
+                    </div>
+                    <div class="package__mascot">
+                        <img src="./assets/Twisted-Sparkles-char-James-Pond.png" alt="">
+                    </div>
+                </div>
+                <div class="package__info">
+                    <h2 class="package__title package__title--green">James Pond</h2>
+                    <p class="package__desc">Neither stirred or shaken, this self-appointed quality controller likes his Twisted Sparkles straight out the can.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="products">
+            <div class="products__info">
+                <h2 class="products__heading">Our <span class="new-line">Products</span></h2>
+                <p class="products__text">Twisted Sparkles is a 5% alcohol beverage with only 3 grams of sugar, 3 grams of carbs and 100 calories in every 300ml can. All this without compromising on taste so you don’t have to feel guilty about having a good time.</p>
+                <p class="products__text">Currently available in 2 flavours, passion fruit and lemon & lime.</p>
+                <p class="products__text">Aluminium cans are 100% and infinitely recyclable. They are also the most recycled substrate in South Africa with an estimated recovery rate of 76.8%</p>
+            </div>
+
+            <div class="products__image">
+                <div class="products__item">
+                    <img src="./assets/Twisted-side-can-Passion.png" alt="">
+                </div>
+                <div class="products__item">
+                    <img src="./assets/Twisted-side-can-Lemon.png" alt="">
+                </div>
+            </div>
+        </section>
+
+
+
+    </main>
+
 </body>
 <script src="./js/app.js"></script>
 </html>
