Contact, banner animation

--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
             </div>
             <div class="banner__heading">
                 <h2 class="banner__title">Twisted Water</h2>
-                <h2 class="banner__desc">That Packs A Punch</h2>
+                <!-- <h2 class="banner__desc">That Packs A Punch</h2> -->
+                <ul class="banner__desc">
+                    <li class="banner__desc-item"><span>That Packs A Punch</span></li>
+                    <li class="banner__desc-item"><span>Refreshingly Twisted</span></li>
+                </ul>
             </div>
         </section>
 
@@ -252,8 +256,8 @@
             </div>
         </section>
 
-        <section class="section">
-            <div class="section__promise">
+        <section class="section story">
+            <div class="section__desc">
                 <h2 class="section__title">Brand <span class="section__title--bold">Promise</span></h2>
                 <div class="section__line"></div>
                 <p class="section__text">Twisted Sparkles is here to create a change in mindset, be category leaders in Africa, and give consumers a fresh drinking experience.</p>
@@ -268,8 +272,8 @@
             </div>
         </section>
 
-        <section class="section">
-            <div class="section__promise">
+        <section class="section find-us">
+            <div class="section__desc">
                 <h2 class="section__title">Where You <span class="section__title--bold">Can Find Us</span></h2>
                 <div class="section__line"></div>
             </div>
@@ -279,6 +283,37 @@
                 </div>
                 <div class="section__mascot">
                     <img src="./assets/Twisted-Sparkles-char-James-Pond.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="section contact">
+            <div class="section__desc">
+                <h2 class="section__title">Get In <span class="section__title--bold">Touch</span></h2>
+                <div class="section__line"></div>
+                <h3 class="section__subtitle">Email Us</h3>
+                <div class="section__form">
+                    <form class="contact-form" action="" method="post">
+                        <div class="contact-form__txt-field">
+                            <input class="contact-form__input" type="text" required>
+                            <label class="contact-form__label" for="">Name</label>
+                        </div>
+                        <div class="contact-form__txt-field">
+                            <input class="contact-form__input" type="email" required>
+                            <label class="contact-form__label" for="">Email Adress</label>
+                        </div>
+                        <div class="contact-form__txt-field">
+                            <input class="contact-form__input" type="text" required>
+                            <label class="contact-form__label" for="">Message</label>
+                        </div>
+                        <input class="contact-form__submit" type="submit" value="Send">
+
+                    </form>
+                </div>
+            </div>
+            <div class="section__image">
+                <div class="section__circle">
+                    <img src="./assets/Twisted-Sparkles-cans.png" alt="">
                 </div>
             </div>
         </section>
